--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,9 +1,3 @@
-@import url(https://fonts.googleapis.com/css?family=Rubik:300,300i,400,400i,500,500i,700,700i,900,900i&display=swap);
-
-
-
-
-
 body {
   font-family: Rubik;
 }
@@ -1371,27 +1365,6 @@ section.lazy-placeholder:after {
 }
 .cid-sksTUG9OnZ .mbr-text {
   color: #767676;
-}
-.cid-skrV3hy0jB {
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  background-color: #ffffff;
-}
-@media (max-width: 991px) {
-  .cid-skrV3hy0jB .image-wrapper {
-    margin-bottom: 1rem;
-  }
-}
-.cid-skrV3hy0jB .row {
-  flex-direction: row-reverse;
-}
-.cid-skrV3hy0jB img {
-  width: 100%;
-}
-@media (min-width: 992px) {
-  .cid-skrV3hy0jB .text-wrapper {
-    padding: 2rem;
-  }
 }
 .cid-rQebAdBGIQ {
   padding-top: 30px;
@@ -2926,7 +2899,7 @@ section.lazy-placeholder:after {
 }
 .cid-scloSPljG8 {
   padding-top: 90px;
-  padding-bottom: 90px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-scloSPljG8 h4 {
@@ -2942,6 +2915,26 @@ section.lazy-placeholder:after {
   padding-top: 2rem;
 }
 .cid-scloSPljG8 .card-wrapper {
+  height: 100%;
+}
+.cid-sMPqP27Ej8 {
+  padding-top: 0px;
+  padding-bottom: 60px;
+  background-color: #ffffff;
+}
+.cid-sMPqP27Ej8 h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sMPqP27Ej8 p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sMPqP27Ej8 .card-box {
+  padding-top: 2rem;
+}
+.cid-sMPqP27Ej8 .card-wrapper {
   height: 100%;
 }
 .cid-scloM0R09m {
@@ -3009,7 +3002,7 @@ section.lazy-placeholder:after {
 }
 .cid-scls4n2hJw {
   padding-top: 15px;
-  padding-bottom: 90px;
+  padding-bottom: 0px;
   background-color: #ffffff;
 }
 .cid-scls4n2hJw h4 {
@@ -3025,6 +3018,26 @@ section.lazy-placeholder:after {
   padding-top: 2rem;
 }
 .cid-scls4n2hJw .card-wrapper {
+  height: 100%;
+}
+.cid-sMPyB6xiyr {
+  padding-top: 30px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-sMPyB6xiyr h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sMPyB6xiyr p {
+  color: #767676;
+  text-align: left;
+}
+.cid-sMPyB6xiyr .card-box {
+  padding-top: 2rem;
+}
+.cid-sMPyB6xiyr .card-wrapper {
   height: 100%;
 }
 .cid-sclyy6Canv {
@@ -5297,4 +5310,519 @@ section.lazy-placeholder:after {
   .cid-scC4gBAyK1 .form-group {
     margin: 0;
   }
+}
+.cid-rQbKiJXNZe .navbar {
+  padding: .5rem 0;
+  background: #404040;
+  transition: none;
+  min-height: 77px;
+}
+.cid-rQbKiJXNZe .navbar-dropdown.bg-color.transparent.opened {
+  background: #404040;
+}
+.cid-rQbKiJXNZe a {
+  font-style: normal;
+}
+.cid-rQbKiJXNZe .nav-item span {
+  padding-right: 0.4em;
+  line-height: 0.5em;
+  vertical-align: text-bottom;
+  position: relative;
+  text-decoration: none;
+}
+.cid-rQbKiJXNZe .nav-item a {
+  display: -webkit-flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.7rem 0 !important;
+  margin: 0rem .65rem !important;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+}
+.cid-rQbKiJXNZe .nav-item:focus,
+.cid-rQbKiJXNZe .nav-link:focus {
+  outline: none;
+}
+.cid-rQbKiJXNZe .btn {
+  padding: 0.4rem 1.5rem;
+  display: -webkit-inline-flex;
+  align-items: center;
+  -webkit-align-items: center;
+}
+.cid-rQbKiJXNZe .btn .mbr-iconfont {
+  font-size: 1.6rem;
+}
+.cid-rQbKiJXNZe .menu-logo {
+  margin-right: auto;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand {
+  display: flex;
+  margin-left: 5rem;
+  padding: 0;
+  transition: padding .2s;
+  min-height: 3.8rem;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand .navbar-caption-wrap {
+  display: flex;
+  -webkit-align-items: center;
+  align-items: center;
+  word-break: break-word;
+  min-width: 7rem;
+  margin: .3rem 0;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand .navbar-caption-wrap .navbar-caption {
+  line-height: 1.2rem !important;
+  padding-right: 2rem;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand .navbar-logo {
+  font-size: 4rem;
+  transition: font-size 0.25s;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand .navbar-logo img {
+  display: flex;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand .navbar-logo .mbr-iconfont {
+  transition: font-size 0.25s;
+}
+.cid-rQbKiJXNZe .menu-logo .navbar-brand .navbar-logo a {
+  display: inline-flex;
+}
+.cid-rQbKiJXNZe .navbar-toggleable-sm .navbar-collapse {
+  justify-content: flex-end;
+  -webkit-justify-content: flex-end;
+  padding-right: 5rem;
+  width: auto;
+}
+.cid-rQbKiJXNZe .navbar-toggleable-sm .navbar-collapse .navbar-nav {
+  flex-wrap: wrap;
+  -webkit-flex-wrap: wrap;
+  padding-left: 0;
+}
+.cid-rQbKiJXNZe .navbar-toggleable-sm .navbar-collapse .navbar-nav .nav-item {
+  -webkit-align-self: center;
+  align-self: center;
+}
+.cid-rQbKiJXNZe .navbar-toggleable-sm .navbar-collapse .navbar-buttons {
+  padding-left: 0;
+  padding-bottom: 0;
+}
+.cid-rQbKiJXNZe .dropdown .dropdown-menu {
+  background: #404040;
+  display: none;
+  position: absolute;
+  min-width: 5rem;
+  padding-top: 1.4rem;
+  padding-bottom: 1.4rem;
+  text-align: left;
+}
+.cid-rQbKiJXNZe .dropdown .dropdown-menu .dropdown-item {
+  width: auto;
+  padding: 0.235em 1.5385em 0.235em 1.5385em !important;
+}
+.cid-rQbKiJXNZe .dropdown .dropdown-menu .dropdown-item::after {
+  right: 0.5rem;
+}
+.cid-rQbKiJXNZe .dropdown .dropdown-menu .dropdown-submenu {
+  margin: 0;
+}
+.cid-rQbKiJXNZe .dropdown.open > .dropdown-menu {
+  display: block;
+}
+.cid-rQbKiJXNZe .navbar-toggleable-sm.opened:after {
+  position: absolute;
+  width: 100vw;
+  height: 100vh;
+  content: '';
+  background-color: rgba(0, 0, 0, 0.1);
+  left: 0;
+  bottom: 0;
+  transform: translateY(100%);
+  -webkit-transform: translateY(100%);
+  z-index: 1000;
+}
+.cid-rQbKiJXNZe .navbar.navbar-short {
+  min-height: 60px;
+  transition: all .2s;
+}
+.cid-rQbKiJXNZe .navbar.navbar-short .navbar-toggler-right {
+  top: 20px;
+}
+.cid-rQbKiJXNZe .navbar.navbar-short .navbar-logo a {
+  font-size: 2.5rem !important;
+  line-height: 2.5rem;
+  transition: font-size 0.25s;
+}
+.cid-rQbKiJXNZe .navbar.navbar-short .navbar-logo a .mbr-iconfont {
+  font-size: 2.5rem !important;
+}
+.cid-rQbKiJXNZe .navbar.navbar-short .navbar-logo a img {
+  height: 3rem !important;
+}
+.cid-rQbKiJXNZe .navbar.navbar-short .navbar-brand {
+  min-height: 3rem;
+}
+.cid-rQbKiJXNZe button.navbar-toggler {
+  width: 31px;
+  height: 18px;
+  cursor: pointer;
+  transition: all .2s;
+  top: 1.5rem;
+  right: 1rem;
+}
+.cid-rQbKiJXNZe button.navbar-toggler:focus {
+  outline: none;
+}
+.cid-rQbKiJXNZe button.navbar-toggler .hamburger span {
+  position: absolute;
+  right: 0;
+  width: 30px;
+  height: 2px;
+  border-right: 5px;
+  background-color: #ffffff;
+}
+.cid-rQbKiJXNZe button.navbar-toggler .hamburger span:nth-child(1) {
+  top: 0;
+  transition: all .2s;
+}
+.cid-rQbKiJXNZe button.navbar-toggler .hamburger span:nth-child(2) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rQbKiJXNZe button.navbar-toggler .hamburger span:nth-child(3) {
+  top: 8px;
+  transition: all .15s;
+}
+.cid-rQbKiJXNZe button.navbar-toggler .hamburger span:nth-child(4) {
+  top: 16px;
+  transition: all .2s;
+}
+.cid-rQbKiJXNZe nav.opened .hamburger span:nth-child(1) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rQbKiJXNZe nav.opened .hamburger span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  transform: rotate(45deg);
+  transition: all .25s;
+}
+.cid-rQbKiJXNZe nav.opened .hamburger span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  transition: all .25s;
+}
+.cid-rQbKiJXNZe nav.opened .hamburger span:nth-child(4) {
+  top: 8px;
+  width: 0;
+  opacity: 0;
+  right: 50%;
+  transition: all .2s;
+}
+.cid-rQbKiJXNZe .collapsed.navbar-expand {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rQbKiJXNZe .collapsed .btn {
+  display: -webkit-flex;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse {
+  display: none !important;
+  padding-right: 0 !important;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.collapsing,
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.show {
+  display: block !important;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.collapsing .navbar-nav,
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.show .navbar-nav {
+  display: block;
+  text-align: center;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item,
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.show .navbar-nav .nav-item {
+  clear: both;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.collapsing .navbar-buttons,
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.show .navbar-buttons {
+  text-align: center;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.collapsing .navbar-buttons:last-child,
+.cid-rQbKiJXNZe .collapsed .navbar-collapse.show .navbar-buttons:last-child {
+  margin-bottom: 1rem;
+}
+.cid-rQbKiJXNZe .collapsed button.navbar-toggler {
+  display: block;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-brand {
+  margin-left: 1rem !important;
+}
+.cid-rQbKiJXNZe .collapsed .navbar-toggleable-sm {
+  flex-direction: column;
+  -webkit-flex-direction: column;
+}
+.cid-rQbKiJXNZe .collapsed .dropdown .dropdown-menu {
+  width: 100%;
+  text-align: center;
+  position: relative;
+  opacity: 0;
+  overflow: hidden;
+  display: block;
+  height: 0;
+  visibility: hidden;
+  padding: 0;
+  transition-duration: .5s;
+  transition-property: opacity,padding,height;
+}
+.cid-rQbKiJXNZe .collapsed .dropdown.open > .dropdown-menu {
+  position: relative;
+  opacity: 1;
+  height: auto;
+  padding: 1.4rem 0;
+  visibility: visible;
+}
+.cid-rQbKiJXNZe .collapsed .dropdown .dropdown-submenu {
+  left: 0;
+  text-align: center;
+  width: 100%;
+}
+.cid-rQbKiJXNZe .collapsed .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+  margin-top: 0;
+  position: inherit;
+  right: 0;
+  top: 50%;
+  display: inline-block;
+  width: 0;
+  height: 0;
+  margin-left: .3em;
+  vertical-align: middle;
+  content: "";
+  border-top: .30em solid;
+  border-right: .30em solid transparent;
+  border-left: .30em solid transparent;
+}
+@media (max-width: 1023px) {
+  .cid-rQbKiJXNZe .navbar-expand {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rQbKiJXNZe img {
+    height: 3.8rem !important;
+  }
+  .cid-rQbKiJXNZe .btn {
+    display: -webkit-flex;
+  }
+  .cid-rQbKiJXNZe button.navbar-toggler {
+    display: block;
+  }
+  .cid-rQbKiJXNZe .navbar-brand {
+    margin-left: 1rem !important;
+  }
+  .cid-rQbKiJXNZe .navbar-toggleable-sm {
+    flex-direction: column;
+    -webkit-flex-direction: column;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse {
+    display: none !important;
+    padding-right: 0 !important;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse.collapsing,
+  .cid-rQbKiJXNZe .navbar-collapse.show {
+    display: block !important;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse.collapsing .navbar-nav,
+  .cid-rQbKiJXNZe .navbar-collapse.show .navbar-nav {
+    display: block;
+    text-align: center;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse.collapsing .navbar-nav .nav-item,
+  .cid-rQbKiJXNZe .navbar-collapse.show .navbar-nav .nav-item {
+    clear: both;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
+  .cid-rQbKiJXNZe .navbar-collapse.show .navbar-nav .nav-item:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse.collapsing .navbar-buttons,
+  .cid-rQbKiJXNZe .navbar-collapse.show .navbar-buttons {
+    text-align: center;
+  }
+  .cid-rQbKiJXNZe .navbar-collapse.collapsing .navbar-buttons:last-child,
+  .cid-rQbKiJXNZe .navbar-collapse.show .navbar-buttons:last-child {
+    margin-bottom: 1rem;
+  }
+  .cid-rQbKiJXNZe .dropdown .dropdown-menu {
+    width: 100%;
+    text-align: center;
+    position: relative;
+    opacity: 0;
+    overflow: hidden;
+    display: block;
+    height: 0;
+    visibility: hidden;
+    padding: 0;
+    transition-duration: .5s;
+    transition-property: opacity,padding,height;
+  }
+  .cid-rQbKiJXNZe .dropdown.open > .dropdown-menu {
+    position: relative;
+    opacity: 1;
+    height: auto;
+    padding: 1.4rem 0;
+    visibility: visible;
+  }
+  .cid-rQbKiJXNZe .dropdown .dropdown-submenu {
+    left: 0;
+    text-align: center;
+    width: 100%;
+  }
+  .cid-rQbKiJXNZe .dropdown .dropdown-toggle[data-toggle="dropdown-submenu"]::after {
+    margin-top: 0;
+    position: inherit;
+    right: 0;
+    top: 50%;
+    display: inline-block;
+    width: 0;
+    height: 0;
+    margin-left: .3em;
+    vertical-align: middle;
+    content: "";
+    border-top: .30em solid;
+    border-right: .30em solid transparent;
+    border-left: .30em solid transparent;
+  }
+}
+@media (min-width: 767px) {
+  .cid-rQbKiJXNZe .menu-logo {
+    flex-shrink: 0;
+    -webkit-flex-shrink: 0;
+  }
+}
+.cid-rQbKiJXNZe .navbar-collapse {
+  flex-basis: auto;
+  -webkit-flex-basis: auto;
+}
+.cid-rQbKiJXNZe .nav-link:hover,
+.cid-rQbKiJXNZe .dropdown-item:hover {
+  color: #ff3366 !important;
+}
+.cid-sCgSpwcGOX {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-sCgSpwcGOX .card-img {
+  background-color: #fff;
+}
+.cid-sCgSpwcGOX .card {
+  align-self: stretch;
+}
+.cid-sCgSpwcGOX .card-box {
+  padding: 2rem;
+  background-color: #ffffff;
+}
+.cid-sCgSpwcGOX h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sCgSpwcGOX p {
+  text-align: left;
+}
+.cid-sCgSpwcGOX .mbr-text {
+  color: #767676;
+}
+.cid-sCgSpwcGOX .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-sCgSpwcGOX .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+@media (min-width: 992px) {
+  .cid-sCgSpwcGOX .my-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 15px;
+    -webkit-flex: 0 0 20%;
+  }
+}
+.cid-sCgSqjKINo {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-sCgSqjKINo .card-img {
+  background-color: #fff;
+}
+.cid-sCgSqjKINo .card {
+  align-self: stretch;
+}
+.cid-sCgSqjKINo .card-box {
+  padding: 2rem;
+  background-color: #ffffff;
+}
+.cid-sCgSqjKINo h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-sCgSqjKINo p {
+  text-align: left;
+}
+.cid-sCgSqjKINo .mbr-text {
+  color: #767676;
+}
+.cid-sCgSqjKINo .card-wrapper {
+  height: 100%;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-sCgSqjKINo .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+@media (min-width: 992px) {
+  .cid-sCgSqjKINo .my-col {
+    flex: 0 0 20%;
+    max-width: 20%;
+    padding: 15px;
+    -webkit-flex: 0 0 20%;
+  }
+}
+.cid-sCgWFzwXCB {
+  padding-top: 0px;
+  padding-bottom: 0px;
+  background-color: #ffffff;
+}
+.cid-sCgWFzwXCB .row {
+  align-items: stretch;
+  justify-content: center;
+}
+.cid-sCgWFzwXCB .img-item {
+  position: relative;
+}
+.cid-sCgWFzwXCB .img-item img {
+  width: 100%;
+  object-fit: cover;
+}
+.cid-sCgWFzwXCB .img-item .img-description {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  z-index: 2;
+  padding: .5rem 1rem .5rem;
+  word-break: break-word;
+}
+.cid-sCgWFzwXCB .img-item .img-description p {
+  margin-bottom: 0;
 }
